testcases/error/missing_tri.veryl
module missing_tri (
    a: inout logic,
) {
    assign a = 0;
}
